--- a/src/css/style.css
+++ b/src/css/style.css
@@ -280,8 +280,9 @@ h2 {
     }
 
     .home {
-        display: block;
         padding-top: 50px;
+        align-items: start;
+        grid-template-columns: 6fr;
     }
 
     .img-home {
